# CCReStatus

./: .gitignore
android/: gradlew
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/claudescreensaver/: MainActivity.kt
android/app/src/main/java/com/claudescreensaver/data/: BillingManager.kt
android/app/src/main/java/com/claudescreensaver/data/models/: AgentStatus.kt
android/app/src/main/java/com/claudescreensaver/data/network/: SseClient.kt
android/app/src/main/java/com/claudescreensaver/ui/components/: ClawdMascot.kt  ContextProgressBar.kt  SessionCard.kt  StatusIndicator.kt
android/app/src/main/java/com/claudescreensaver/ui/screens/: OnboardingScreen.kt  SessionFullScreen.kt  SettingsScreen.kt  SimpleStatusScreen.kt  SkinMarketplaceScreen.kt  StatusDashboardScreen.kt
android/app/src/main/java/com/claudescreensaver/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/com/claudescreensaver/viewmodel/: StatusViewModel.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/claudescreensaver/data/models/: AgentStatusTest.kt
android/app/src/test/java/com/claudescreensaver/data/network/: SseClientTest.kt
android/app/src/test/java/com/claudescreensaver/viewmodel/: StatusViewModelTest.kt
bridge/: pyproject.toml
bridge/bridge/: mcp_server.py  models.py  server.py  skins.py
bridge/tests/: test_server.py  test_skins.py
tools/: gen_ghost_icon.py  start-bridge.sh  statusline-bridge.sh
