[project]
name = "claude-screensaver-bridge"
version = "0.1.0"
description = "Bridge server relaying Claude Code hook events via SSE"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11,<4",
    "aiohttp-sse>=2.2,<3",
    "mcp[cli]>=1.0",
    "zeroconf>=0.146,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-aiohttp>=1.1",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
claude-bridge = "bridge.server:main"
claude-orchestrator = "bridge.mcp_server:main"
